// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if.sh 1`] = `
====================================options=====================================
parsers: ["bash"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/bin/bash

if $a; then
  echo 'yes'
fi

if [ $a = $b ]; then
  echo 'yes'
fi

if foo; then
  echo 'yes'
fi

=====================================output=====================================
#!/bin/bash -eu

if $a; then
  echo yesfi

if [ $a = $b ]; then
  echo yesfi

if foo; then
  echo yesfi

================================================================================
`;

exports[`if_elif_else.sh 1`] = `
====================================options=====================================
parsers: ["bash"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/bin/bash

if $a; then
  echo 'a'
elif $b; then
  echo 'b'
else
  echo 'c'
fi

=====================================output=====================================
#!/bin/bash -eu

if $a; then
  echo a
else
  if $b; then
    echo b
  else
    echo c
  fi

fi

================================================================================
`;

exports[`if_else.sh 1`] = `
====================================options=====================================
parsers: ["bash"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/bin/bash

if $a; then
  echo 'a'
else
  echo 'b'
fi

=====================================output=====================================
#!/bin/bash -eu

if $a; then
  echo a
else
  echo b
fi

================================================================================
`;

exports[`if_nested.sh 1`] = `
====================================options=====================================
parsers: ["bash"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#!/bin/bash

if $a; then
  if $b; then
    echo 'c'
  elif $c; then
    echo 'd'
  else 
    echo 'e'
  fi
elif $e; then
  echo 'f'
else
  echo 'g'
fi

=====================================output=====================================
#!/bin/bash -eu

if $a; then
  if $b; then
    echo c
  else
    if $c; then
      echo d
    else
      echo e
    fi

  fi

else
  if $e; then
    echo f
  else
    echo g
  fi

fi

================================================================================
`;
